--- a/bedrock/firefox/templates/firefox/new/scene2.html
+++ b/bedrock/firefox/templates/firefox/new/scene2.html
@@ -95,8 +95,11 @@
         {{ _('Learn how to make Firefox even smarter, faster and more secure.') }}
       {% endblock %}
       </h1>
+      {% block tagline %}
       <p class="tagline">{{ _('Get informative tips, tricks and product announcements delivered to your inbox.') }}</p>
+      {% endblock %}
 
+      {% block cta %}
       <div class="mzp-c-newsletter">
         {{ email_newsletter_form(
               protocol_component=True,
@@ -105,6 +108,7 @@
               details='<a href="%s" class="email-privacy-link">%s</a>'|format(url('privacy.email'), _('How will Mozilla use my email?'))|safe
         )}}
       </div>
+      {% endblock %}
 
       <aside class="email-privacy mzp-u-modal-content">
         <h3>{{ _('How will Mozilla use my email?') }}</h3>
